# Brasil-Topojsons

./: .gitignore  Makefile  Notas.md  README.md  municipios.csv  municipios.json  municipios.topo.json  municipios.xlsx  pyproject.toml  regioes_imediatas.topo.json  regioes_intermediarias.topo.json  tabelas-municipios-brasileiros.ipynb  ufs.topo.json
min/: municipios.csv  municipios.json  municipios.topo.json  municipios.xlsx  regioes.csv  regioes.json  regioes.topo.json  regioes.xlsx  regioes_imediatas.csv  regioes_imediatas.json  regioes_imediatas.topo.json  regioes_imediatas.xlsx  regioes_intermediarias.csv  regioes_intermediarias.json  regioes_intermediarias.topo.json  regioes_intermediarias.xlsx  ufs.csv  ufs.json  ufs.topo.json  ufs.xlsx
