[tool.poetry]
name = "brasil-topojsons"
version = "0.1.0"
description = ""
authors = ["Beta Faccion <betafcc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tornado = "<5"
jupyterlab = "^0.35.4"
pandas = "^0.23.4"
xlrd = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
